# netspeed

./: Cargo.toml  LICENSE  README.md
src/: app.rs  app_tests.rs  main.rs  main_tests.rs  network.rs  network_tests.rs  speedtest.rs  speedtest_tests.rs  ui.rs
