[package]
name = "netspeed-ng"
version = "0.1.5"
edition = "2024"
description = "A real-time network speed monitor with a terminal UI"
license = "Apache-2.0"
repository = "https://github.com/nitingupta910/netspeed"
readme = "README.md"

[[bin]]
name = "netspeed"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
